# actix-web-backend

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
actix-web-backend/: Cargo.toml
actix-web-backend/src/: error.rs  handler.rs  lib.rs  main.rs  model.rs  service.rs  util.rs
migrations/: 20220921233707_schema.up.sql  20220921234407_insert.down.sql  20220921234407_insert.up.sql
