[package]
name = "actix-web-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres"] }
serde = "1.0.144"
thiserror = "1.0.35"
anyhow = "1.0.65"
argon2 = "0.4.1"
rand_core = { version = "0.6.4", features = ["std"] }
log = "0.4.17"
env_logger = "0.9.1"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
